@@ -1,3 +1,8 @@
+2004-06-22  Andreas Rottmann  <a.rottmann@gmx.at>
+
+	* gtk-spec.scm, gdk-spec.scm: Fix for G-Wrap #:dependencies API
+	change.
+
 2004-05-17  Andreas Rottmann  <a.rottmann@gmx.at>
 
 	* gtk-support.h, gtk-support.c (_wrap_gtk_dialog_get_vbox)
